--- a/config/database.yml
+++ b/config/database.yml
@@ -9,13 +9,11 @@
 #       Choose the win32 build.
 #       Install PostgreSQL and put its /bin directory on your path.
 development:
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql
   database: org_development
-  pool: 5
-  username: nik
+  username: root
   password: 12345
-
+  host: localhost
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
@@ -35,18 +33,15 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql
   database: org_test
   pool: 5
   username: org
   password:
 
 production:
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql
   database: org_production
-  pool: 5
   username: org
   password:
 
