--- a/config/database.yml
+++ b/config/database.yml
@@ -9,10 +9,11 @@
 #       Choose the win32 build.
 #       Install PostgreSQL and put its /bin directory on your path.
 development:
-  adapter: mysql
+  adapter: mysql2
   database: org_development
+  pool: 100
   username: root
-  password: 12345
+  password: '12345'
   host: localhost
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -33,15 +34,17 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql
+  adapter: mysql2
   database: org_test
   pool: 5
-  username: org
-  password:
+  username: root
+  password: '12345'
+  host: localhost
 
 production:
-  adapter: mysql
+  adapter: mysql2
   database: org_production
-  username: org
-  password:
+  username: root
+  password: '12345'
+  host: localhost
 
